# omnect-device-service

./: .gitignore  CHANGELOG.md  Cargo.audit.ignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.dump  build_env-template.sh  omnect-device-service_0.14.16.bb  project-context.md  rust-toolchain.toml  start-local-build-template.sh  temp.json  test.json  tmp  tree
.cargo/: config.toml
.github/workflows/: conventional-commit-checker.yml
docs/: downgrade.drawio
healthcheck/: omnect-pstore-boottag.service  omnect-pstore-log-reboot.service  omnect-pstore-log-shutdown.service  omnect-reboot-reason.service  omnect_health__services.sh  omnect_health_checks.json.template  omnect_log_reboot_reason_to_pmsg.sh  omnect_pmsg_to_reboot_reason.sh  omnect_reboot_reason.sh  omnect_service_log_analysis.json.template
polkit/: omnect-device-service.rules
script/: Add-ModuleToAllDevicesInIotHub.ps1  factory_reset.sh  patch_sw_versions.sh
src/: build.rs  client.rs  common.rs  demo_portal.rs  demo_portal_module.rs  direct_methods.rs  grub_env.rs  lib.rs  logging.rs  main.rs  message.rs  reboot_reason.rs  system.rs  systemd.rs  test_util.rs  twin.rs  update_validation.rs  web_service.rs
src/bootloader_env/: bootloader_env.rs  grub.rs  grub_env.rs  mod.rs  uboot.rs  uboot_env.rs
src/direct_methods/: mod.rs  mod_test.rs
src/systemd/: mod.rs  networkd.rs  unit.rs  wait_online.rs  watchdog.rs
src/twin/: common.rs  consent.rs  factory_reset.rs  mod.rs  mod_test.rs  modem_info.rs  network.rs  network_status.rs  provisioning_config.rs  reboot.rs  ssh.rs  ssh_tunnel.rs  system_info.rs  web_service.rs  wifi_commissioning.rs
src/twin/feature/: command.rs  fs_watcher.rs  mod.rs
src/twin/firmware_update/: adu_types.rs  common.rs  mod.rs  os_version.rs  update_validation.md  update_validation.rs
src/util/: mod.rs
sudo/: fw_setenv_no_script.sh  omnect-device-service  omnect-device-service-grub  omnect-device-service-uboot  omnect-device-service-update-validation-grub  omnect-device-service-update-validation-uboot
systemd/: demo-portal-downgrade-start.path  demo-portal-downgrade-start.service  demo-portal-downgrade-stop.path  demo-portal-downgrade-stop.service  demo-portal-factory-reset.path  demo-portal-factory-reset.service  demo-portal-factory.path  demo-portal-factory.service  demo-portal-module.service  demo-portal-module.timer  demo-portal-reboot.path  demo-portal-reboot.service  icsdm-device-factory-reset.path  icsdm-device-factory-reset.service  icsdm-device-reboot.path  icsdm-device-service.service  omnect-device-authorized_keys.path  omnect-device-authorized_keys.service  omnect-device-factory-reset.path  omnect-device-factory-reset.service  omnect-device-reboot.path  omnect-device-service.exec_pre_start.sh  omnect-device-service.exec_start_pre.sh  omnect-device-service.exec_stop_post.sh  omnect-device-service.service  omnect-device-service.socket  omnect-device-service.timer  omnect-reboot-reason.service  omnect-update-finalization.service  remote-features-factory-reset.path  remote-features-factory-reset.service  remote-features-module.service  remote-features-module.timer  remote-features-reboot.path  update-validation-observer.service  update-validation-observer.sh  update-validation-observer.timer
testfiles/: consent_conf.json  invalid_consent.json  request_consent.json
testfiles/negative/: factory-reset-status_unexpected_factory_reset_format  factory-reset-status_unexpected_reset_settings  factory-reset-status_unexpected_reset_type  omnect-os-initramfs-factory-reset-format.json  systemd-networkd-link-description-missing-mac.json  systemd-networkd-wait-online-invalid-default-timeout.service  systemd-networkd-wait-online-invalid-envfile.service  systemd-networkd-wait-online-invalid-timeout.env  systemd-networkd-wait-online-invalid-timeout.service  systemd-networkd-wait-online-no-envfile.service  systemd-networkd-wait-online-no-execstart.service
testfiles/positive/: b7afb216-5f7a-4755-a300-9374f8a0e9ff  cert.pub  config.toml.est  config.toml.tpm  consent_conf.json  deviceid-bd732105ef89cf8edd2606a5309c8a26b7b5599a4e124a0fe6199b6b2f60e655.cer  deviceid1-bd732105ef89cf8edd2606a5309c8a26b7b5599a4e124a0fe6199b6b2f60e655.cer  deviceid2-bd732105ef89cf8edd2606a5309c8a26b7b5599a4e124a0fe6199b6b2f60e655.cer  du-config.json  factory-reset-status_normal_boot  factory-reset-status_succeeded  factory-reset-status_unexpected_reset_settings  history_consent.json  omnect-os-initramfs-factory-reset.json  omnect-os-initramfs-normal-boot.json  os-release  publish_endpoints.json  ssh_root_ca.pub  sw-versions  systemd-networkd-link-description.json  systemd-networkd-wait-online-env1.service  systemd-networkd-wait-online-env2.service  systemd-networkd-wait-online-env3.service  systemd-networkd-wait-online-no-envfile.service  systemd-networkd-wait-online.service  systemd-networkd-wait-online1.env  systemd-networkd-wait-online2.env  systemd-networkd-wait-online3.env  update.tar
testfiles/positive/reboot_reason/000001+2025-04-03_17-42-53/: reboot-reason.json
testfiles/wifi_commissioning/: os-release
