[package]
authors = ["omnect@conplement.de"]
build = "src/build.rs"
description = "This service allows remote features like: user fw update consent, factory reset, network adapter status and reboot."
edition = "2021"
homepage = "https://www.omnect.io/home"
license = "MIT OR Apache-2.0"
name = "omnect-device-service"
readme = "README.md"
repository = "https://github.com/omnect/omnect-device-service.git"
version = "0.30.4"

[dependencies]
actix-server = { version = "2.3", default-features = false }
actix-web = { version = "4.9", default-features = false }
anyhow = { version = "1.0", default-features = false }
async-trait = { version = "0.1", default-features = false }
#azure-iot-sdk = { git = "https://github.com/omnect/azure-iot-sdk.git", tag = "0.13.8", default-features = false, features = [
#  "module_client",
#] }
azure-iot-sdk = { git = "https://github.com/janzachmann/azure-iot-sdk.git", branch = "chore", default-features = false, features = [
  "module_client",
] }
cfg-if = { version = "1.0", default-features = false }
dotenvy = { version = "0.15", default-features = false }
env_logger = { version = "0.11", default-features = false }
freedesktop_entry_parser = { version = "1.3", default-features = false }
futures = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
glob = { version = "0.3", default-features = false }
lazy_static = { version = "1.4", default-features = false }
log = { version = "0.4", default-features = false }
log-panics = { version = "2", default-features = false }
#modemmanager = { git = "https://github.com/omnect/modemmanager.git", tag = "0.3.4", default-features = false, optional = true }
modemmanager = { git = "https://github.com/janzachmann/modemmanager.git", branch = "chore", default-features = false, optional = true }
nix = { version = "0.29", default-features = false, features = ["time"] }
notify = { version = "8.0", default-features = false }
notify-debouncer-full = { version = "0.5", default-features = false }
regex = { version = "1.11", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = [
  "default-tls",
] }
sd-notify = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
serde_repr = { version = "0.1", default-features = false }
serde_with = { version = "3.8", default-features = false, features = [
  "std",
  "macros",
] }
signal-hook = { version = "0.3", default-features = false }
signal-hook-tokio = { version = "0.3", default-features = false, features = [
  "futures-v0_3",
] }
strum_macros = { version = "0.26", default-features = false }
sysinfo = { version = "0.33", default-features = false, features = [
  "component",
  "disk",
  "system",
] }
#systemd-zbus = { version = "5.1", default-features = false }
systemd-zbus = { version = "5.1" }
time = { version = "0.3", default-features = false, features = ["formatting"] }
tokio = { version = "1", default-features = false }
tokio-stream = { version = "0.1", default-features = false, features = [
  "time",
] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
uuid = { version = "1.4", default-features = false }
x509-parser = { version = "0.16", default-features = false }
zbus = { version = "5.3" }
#zbus = { version = "5.3", default-features = false, features = ["tokio"] }

[dev-dependencies]
actix-web = "4"
assert-json-diff = "2.0"
cp_r = "0.5"
futures-executor = "0.3"
mockall = "0.13"
rand = "0.8"
regex = "1"
omnect-device-service = { path = ".", features = ["mock"] }
tempfile = "3.14"

[features]
default = []
bootloader_uboot = []
bootloader_grub = []
mock = []
modem_info = ["modemmanager"]
